--- a/src/App/BlogBundle/Resources/views/Blog/index.html.twig
+++ b/src/App/BlogBundle/Resources/views/Blog/index.html.twig
@@ -10,12 +10,15 @@
         <div {{ createphp_attributes(rdf) }}>
             <h1 class="my-title" {{ createphp_attributes( rdf.title ) }}>{{ createphp_content( rdf.title ) }}</h1>
             <div {{ createphp_attributes( rdf.body ) }}>{{ createphp_content( rdf.body ) }}</div>
+
+            {% for tag in rdf.tags %}{{ tag }}
+                <div {{ createphp_attributes( tag ) }}>{{ createphp_content( tag ) }}</div>
+            {% endfor %}
         </div>
         {% endcreatephp %}
 
         {% render(controller(
-        "cmf_create.jsloader.controller:includeJSFilesAction",
-        {"editor": "ckeditor" }
+        "cmf_create.jsloader.controller:includeJSFilesAction"
         )) %}
     </body>
 
