--- a/src/App/MainBundle/Resources/public/css/skin-overlay.css
+++ b/src/App/MainBundle/Resources/public/css/skin-overlay.css
@@ -2,7 +2,7 @@
 
 /* HEADER */
 .header { 
-	position: relative; width: 100%; background-color: #345; background-image: url(../../images/site/wayback.jpg); background-size: cover;  background-position: center center; 
+	position: relative; width: 100%; background-color: #345; background-image: url(/images/overlay-image.jpg); background-size: cover;  background-position: center center;
 	}
 	.header img { 
 		display: none; 
@@ -14,7 +14,7 @@
 		content: ""; display: block; position: absolute; top: 0; left: 0; right: 0; bottom: 0; z-index: 0; background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAADCAYAAABWKLW/AAAAFUlEQVQIW2NkQAKMUPZ/IM0I44DFABJxAQQMGKylAAAAAElFTkSuQmCC); 
 		}
 	.header h1 {
-		margin: 0 0 .3em 0; font-size: 5.8em; line-height: 1; font-weight: 200; color: #fff; text-shadow: 0 1px 0 rgba(51, 51, 51, 0.36); letter-spacing: -6px; text-transform: uppercase; 
+		margin: 0 0 .3em 0; font-size: 5.8em; line-height: 1; font-weight: 300; color: #fff; text-shadow: 0 1px 0 rgba(51, 51, 51, 0.36); letter-spacing: -3px; text-transform: uppercase;
 		}
 	.header p { 
 		color: #fff; background: none; border: 1px solid #FFF; text-transform: uppercase; font-style: normal; padding: 10px 14px;
@@ -22,7 +22,7 @@
 
 /* NAV */
 .vs-nav li a { 
-	color: rgba(255, 255, 255, 0.5); text-shadow: 0 2px 0 rgba(51, 51, 51, 0.2); 
+	color: rgba(255, 255, 255, 0.8); text-shadow: 0 2px 0 rgba(51, 51, 51, 0.2);
 	}
 .vs-nav li a i { 
 	text-shadow: none; 
