--- a/src/App/MainBundle/Resources/public/css/main.css
+++ b/src/App/MainBundle/Resources/public/css/main.css
@@ -128,7 +128,8 @@ p {
 /* blockquote  */
 blockquote {
  	position: relative; margin: 2em 0; padding: .3em 2em 1em 2.0em; font-size: 1.6em; font-family: Georgia, "Times New Roman", Times, serif; font-weight: 300; font-style: italic;
-	}
+    border-left:none;
+    }
 blockquote:before {
  	display: block; content: "\f10d"; line-height: 1; font-size: 1.2em; position: absolute; left: 0; top: -0.1em; color: #DDE4E6;
 	}
@@ -1181,13 +1182,17 @@ h2 i[class^="icon-"], h2 i[class*=" icon-"], h2 i.fa {
 		
 /* MEDIA CELL DESC */
 .media-cell-desc {
- 	padding: 28px 40px; border-style: solid; border-width: 1px; border-color: #DDE4E6; border-radius: 0 0 4px 4px;
+    padding: 40px; border-style: solid; border-width: 1px; border-color: #DDE4E6;
+    border-radius: 4px 4px 0 0 ;
+    position: relative;
 	}
 .media-cell-desc h3 {
  	text-transform: uppercase; padding: 0; margin: 0px; font-weight: 400; font-size: 1em;
+    /*min-height: 55px;*/
 	}
 	.media-cell-desc h3 a {
 		color: #444; border-bottom: 2px solid #FFF;
+        line-height: 25px;
 		}
 		.media-cell-desc h3 a:hover {
 			border-color: #ddd
@@ -1199,7 +1204,11 @@ h2 i[class^="icon-"], h2 i[class*=" icon-"], h2 i.fa {
 		font-size: .9em; margin: .4em 0 0; color: #a7b6b9;
 		}
 	.media-cell-desc .date {
-		float: left; margin-right: 16px; padding: 4px 8px; text-align: center; font-size: 14px; line-height: 1; color: #fff; border-radius: 2px; margin-top: -66px; position: relative; background: #FFF; margin-left: 0%; background: #5BCF80;;
+		float: left; margin-right: 20px; padding: 4px 8px; text-align: center; font-size: 14px; line-height: 1; color: #fff; border-radius: 2px; background: #FFF; margin-left: 0%; background: #5BCF80;
+
+        bottom: -25px;
+        z-index: 1;
+        position: absolute;
 		}
 		.media-cell-desc .date .day {
 			display: block; font-size: 32px; font-weight: 800; color: #fff;
@@ -1212,6 +1221,12 @@ h2 i[class^="icon-"], h2 i[class*=" icon-"], h2 i.fa {
 .media-box {
  	position: relative; margin-bottom: 30px; background-color: #fff;
 	}
+    .media-box .intro{
+        padding: 40px;
+        background-color: #FAFAFA;
+        word-spacing: 2px;
+        text-align: left;
+    }
 	.media-box a {
 		position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: #fff; opacity: 0;
         /*filter: alpha(opacity = 0);*/
@@ -2785,7 +2800,7 @@ a.more-link:hover,
 	}
 	
 /* SECONDARY COLOR : #5BCF80 - lighter than primary color
-   ================================================== */	
+   ================================================== */
 .skill-unit .bar .progress,
 .event .date,
 .letter-info p i,
