Fix navigation error in mobile view

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -205,6 +205,7 @@
         <div class="wrapper">
             {% block content %}
             {% endblock content %}
+            <div class="p-overlay"></div>
         </div>
         <!-- WRAPPER -->
 
