--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -173,7 +173,7 @@
 
         <!-- HEADER -->
         <header class="header">
-            <img src="images/site/avatar.png" alt="avatar">
+            {#<img src="images/site/avatar.png" alt="avatar">#}
             <h1>Hoang ND</h1>
             <p>web developer</p>
 
