--- a/src/App/MainBundle/Resources/views/Main/index.html.twig
+++ b/src/App/MainBundle/Resources/views/Main/index.html.twig
@@ -212,7 +212,7 @@
                 {{ render(controller('AppBlogBundle:Blog:latestBlog')) }}
             </div>
 
-            <p class="launch"><a class="button primary" href="blog.html">SEE ALL POSTS</a></p>
+            <p class="launch"><a class="button primary" href="{{ path('app_blog_blog_list') }}">SEE ALL POSTS</a></p>
             <!-- LATEST POSTS -->
         </div>
     </section>
