--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,5 +1,7 @@
 {% extends 'MopaBootstrapBundle::base_less.html.twig' %}
 
+{% from 'MopaBootstrapBundle::flash.html.twig' import session_flash %}
+
 {% block html_tag %}
 <!--[if lt IE 7]>      <html {{ sonata_seo_html_attributes()}} class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html {{ sonata_seo_html_attributes()}} class="no-js lt-ie9 lt-ie8"> <![endif]-->
@@ -153,6 +155,38 @@
 
         <!-- WRAPPER -->
         <div class="wrapper">
+
+            {% block flashes %}
+                {% if app.session.flashbag.peekAll|length > 0 %}
+                    <div class="row">
+                        <div class="col-sm-8 col-sm-offset-2">
+                            {% set mapping = mopa_bootstrap_flash_mapping()|merge({'fos_user_success':'success'}) %}
+                            {% set flashes = {} %}
+
+                            {% for type in mapping|keys %}
+                                {% set flashes = flashes | merge({ (type) : app.session.flashbag.get(type) }) %}
+                            {% endfor %}
+
+                            {% for type, messages in flashes %}
+                                {% if type == 'fos_user_success' %}
+                                    {% set domain = 'FOSUserBundle' %}
+                                {% endif %}
+                                {% for message in messages %}
+                                    <div class="alert{{ type ? ' '~type : '' }} fade in {{ class|default('') }} alert-dismissable">
+                                        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+                                        {% if use_raw|default(false) %}
+                                            {{ message|trans({}, domain|default('messages'))|raw }}
+                                        {% else %}
+                                            {{ message|trans({}, domain|default('messages')) }}
+                                        {% endif %}
+                                    </div>
+                                {% endfor %}
+                            {% endfor %}
+                        </div>
+                    </div>
+                {% endif %}
+            {% endblock flashes %}
+
             {% block content %}
             {% endblock content %}
             <div class="p-overlay"></div>
