--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -223,7 +223,7 @@
                 e=o.createElement(i);r=o.getElementsByTagName(i)[0];
                 e.src='//www.google-analytics.com/analytics.js';
                 r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','{{ google['analytics'] }}');ga('send','pageview');
+            ga('create','UA-47734275-3');ga('send','pageview');
         </script>
         {% endif %}
 
