--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -228,28 +228,38 @@
         {% endif %}
 
         {% block foot_script_assetic %}
-            {% javascripts  output='js/main.js' filter='?yui_js'
+
+            {% javascripts  output='js/bootstrap.js' filter='?yui_js'
             '@MopaBootstrapBundle/Resources/public/bootstrap/js/tooltip.js'
             '@MopaBootstrapBundle/Resources/public/bootstrap/js/*.js'
             '@MopaBootstrapBundle/Resources/public/js/mopabootstrap-collection.js'
             '@MopaBootstrapBundle/Resources/public/js/mopabootstrap-subnav.js'
+            %}
+            <script type="text/javascript" src="{{ asset_url }}"></script>
+            {% endjavascripts %}
+
+            {% javascripts  output='js/main1.js' filter=''
             '@AppMainBundle/Resources/public/js/jquery-migrate-1.2.1.min.js'
             '@AppMainBundle/Resources/public/js/jquery.address-1.5.min.js'
-            '@AppMainBundle/Resources/public/js/triple.layout.js'
-            '@AppMainBundle/Resources/public/js/smoothscroll.js'
-            '@AppMainBundle/Resources/public/js/nprogress.js'
-            '@AppMainBundle/Resources/public/js/fastclick.js'
             '@AppMainBundle/Resources/public/js/jquery.imagesloaded.min.js'
             '@AppMainBundle/Resources/public/js/jquery.isotope.min.js'
             '@AppMainBundle/Resources/public/js/jquery.validate.min.js'
             '@AppMainBundle/Resources/public/js/jquery.uniform.min.js'
             '@AppMainBundle/Resources/public/js/jquery.fancybox-1.3.4.pack.js'
             '@AppMainBundle/Resources/public/js/jquery.tooltipster.min.js'
-            '@AppMainBundle/Resources/public/js/classie.js'
-            '@AppMainBundle/Resources/public/js/main.js'
             %}
             <script type="text/javascript" src="{{ asset_url }}"></script>
             {% endjavascripts %}
+
+
+            {% javascripts  output='js/main2.js' filter='?yui_js'
+            '@AppMainBundle/Resources/public/js/triple.layout.js'
+            '@AppMainBundle/Resources/public/js/smoothscroll.js'
+            '@AppMainBundle/Resources/public/js/nprogress.js'
+            '@AppMainBundle/Resources/public/js/fastclick.js'
+            '@AppMainBundle/Resources/public/js/classie.js'
+            '@AppMainBundle/Resources/public/js/main.js'
+            %}
         {% endblock foot_script_assetic %}
             {#'@AppMainBundle/Resources/public/js/jquery.flexslider-min.js'#}
         {#<script type="text/javascript">#}
