--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -260,6 +260,8 @@
             '@AppMainBundle/Resources/public/js/classie.js'
             '@AppMainBundle/Resources/public/js/main.js'
             %}
+            <script type="text/javascript" src="{{ asset_url }}"></script>
+            {% endjavascripts %}
         {% endblock foot_script_assetic %}
             {#'@AppMainBundle/Resources/public/js/jquery.flexslider-min.js'#}
         {#<script type="text/javascript">#}
