--- a/src/App/MainBundle/Resources/public/css/main.css
+++ b/src/App/MainBundle/Resources/public/css/main.css
@@ -873,7 +873,7 @@ h2 i[class^="icon-"], h2 i[class*=" icon-"], h2 i.fa {
  		margin-bottom: -30px; font-weight: 800; color: #fff; position: relative; z-index: 100; padding-left: 14px; text-transform: uppercase;
 		}
 	.skill-unit .bar {
-		position: relative; width: 100%; height: 36px;
+		position: relative; width: 100%; height: 36px; margin-bottom: 30px;
 		}
 		.skill-unit .bar .progress {
 	 position: absolute; top: 0; left: 0; width: 0; height: 100%; border-radius: 4px; background : #5BCF80; /*box-shadow: 4px 4px 0 #e7e7e7;*/
