--- a/src/App/MainBundle/Resources/views/Main/index.html.twig
+++ b/src/App/MainBundle/Resources/views/Main/index.html.twig
@@ -302,7 +302,7 @@
                     <p>You can download my CV here.</p>
                     <!-- DOWNLOAD BUTTON -->
                     <div class="download-button">
-                        <a href="/resume.docx" class="button primary">DOWNLOAD CV</a>
+                        <a href="/resume.pdf" class="button primary">DOWNLOAD CV</a>
                     </div>
                     <!-- DOWNLOAD BUTTON -->
 
